--- a/nthuoj/nthuoj.cfg
+++ b/nthuoj/nthuoj.cfg
@@ -6,3 +6,22 @@ submission_code_path = /var/nthuoj/code/
 C = C: -O2 -lm -std=c99
 CPP = C++:  -O2 -lm -std=c++
 CPP11 = C++11: -O2 -lm -std=c++11
+
+
+[web_theme]
+paper = Paper
+cosmo = Cosmo
+darkly = Darkly
+lumen = Lumen
+readable = Readable
+simplex = Simplex
+spacelab = Spacelab
+united = United
+cerulean = Cerulean
+cyborg = Cyborg
+flatly = Flatly
+journal = Journal
+sandstone = Sandstone
+slate = Slate
+superhero = Superhero
+yeti = Yeti
