--- a/nthuoj/nthuoj.cfg
+++ b/nthuoj/nthuoj.cfg
@@ -1,5 +1,8 @@
 [path]
 submission_code_path = /var/nthuoj/code/
+testcase_path = 
+special_judge_path = 
+partial_judge_path = 
 
 
 [compiler_option]
