add default value

--- a/nthuoj/nthuoj.cfg
+++ b/nthuoj/nthuoj.cfg
@@ -1,8 +1,8 @@
 [path]
 submission_code_path = /var/nthuoj/code/
-testcase_path = 
-special_judge_path = 
-partial_judge_path = 
+testcase_path = /var/nthuoj/testdata/
+special_judge_path = /var/nthuoj/speJudge/
+partial_judge_path = /var/nthuoj/parJudge/
 
 
 [compiler_option]
