--- a/nthuoj/nthuoj.cfg
+++ b/nthuoj/nthuoj.cfg
@@ -1,8 +1,8 @@
 [path]
 submission_code_path = /var/nthuoj/code/
 testcase_path = /var/nthuoj/testdata/
-special_judge_path = /var/nthuoj/speJudge/
-partial_judge_path = /var/nthuoj/parJudge/
+special_judge_path = /var/nthuoj/specialJudge/
+partial_judge_path = /var/nthuoj/partialJudge/
 
 
 [compiler_option]
