--- a/nthuoj/config/nthuoj.cfg
+++ b/nthuoj/config/nthuoj.cfg
@@ -4,12 +4,10 @@ testcase_path = /var/nthuoj/testdata/
 special_judge_path = /var/nthuoj/specialJudge/
 partial_judge_path = /var/nthuoj/partialJudge/
 
-
 [compiler_option]
 C = C: -O2 -lm -std=c99
 CPP = C++:  -O2 -lm -std=c++
 CPP11 = C++11: -O2 -lm -std=c++11
-
 
 [web_theme]
 paper = Paper
@@ -28,3 +26,15 @@ sandstone = Sandstone
 slate = Slate
 superhero = Superhero
 yeti = Yeti
+
+[client]
+host = localhost
+database = gggg
+user = henry
+password = 1234
+default-character-set = utf8
+
+[email]
+user = 1234
+password = 1234
+
