--- a/nthuoj/config/nthuoj.cfg
+++ b/nthuoj/config/nthuoj.cfg
@@ -9,6 +9,11 @@ C = C: -O2 -lm -std=c99
 CPP = C++:  -O2 -lm -std=c++
 CPP11 = C++11: -O2 -lm -std=c++11
 
+[file_extension]
+C = c
+CPP = cpp
+CPP11 = cpp
+
 [web_theme]
 paper = Paper
 cosmo = Cosmo
