--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ install:
   - pip install flake8
   - pip install pep8
 before_script:
-  - "pep8 ."
+  - "pep8 --exclude=urls.py --ignore=E501 ."
   - pyflakes .
 script: nosetests
