--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: python
+services:
+  - mysql
 python:
   - "2.7"
 install:
@@ -8,4 +10,6 @@ install:
   - pip install pep8
 before_script:
   - "pep8 --exclude=urls.py --ignore=E501 ."
-script: nosetests
+  - python manage.py syncdb –migrate –noinput
+script:
+  - python manage.py test
